--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Laravel Vue SPA Skeleton"
+APP_NAME="E-Commerce"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -11,9 +11,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=skeleton
+DB_DATABASE=ecommerce
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=Sa123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
